--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "migration:run": "npm run typeorm migration:run -- -t=each"
   },
   "dependencies": {
-    "@types/cors": "^2.8.10",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -19,10 +18,10 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "typeorm": "^0.2.25",
-    "uuidv4": "^6.2.10",
-    "yup": "^0.29.3"
+    "uuidv4": "^6.2.10"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.6",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "3.9.6"
