--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "typeorm": "^0.2.25",
-    "uuidv4": "^6.2.10"
+    "uuidv4": "^6.2.10",
+    "ts-node-dev": "^1.0.0-pre.44"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.6",
-    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "3.9.6"
   }
 }
